# InMemoryCacheForCpp

./: CMakeLists.txt  README.md  cachemanager.h  command.h  config.cfg  config.h  fileutility.h  gtest.h  main.cpp  reader.h  utilstructs.h  writer.h
res/: item_file.txt  reader1.txt  reader1.txt.out.txt  reader_file.txt  writer1.txt  writer_file.txt
